@@ -6,16 +6,12 @@ import org.testng.annotations.Test;
 @Test
 public class FactoryTest {
   
-  @Test
-  public void f2() {
-    
-  }
-  
   @Factory
   public Object[] init() {
     return new Object[] { 
-//        new B("Test1"),
-//        new B("Test2")
+        new B(),
+        new B(),
     };
   }
 }
+
