@@ -1,6 +1,6 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="Single" verbose="3" >
+<suite name="Single" verbose="2" parallel="methods" thread-count="5">
 
 <!--
 <suite-files>
@@ -26,7 +26,7 @@
       <class name="test.CommandLineTest" ></class>
 -->
     <classes>
-      <class name="test.expectedexceptions.ExpectedExceptionsTest" />
+      <class name="test.tmp.FactoryTest" />
     </classes>
   </test>
 
